--- a/app/Src/Project details Screen.fx.yaml
+++ b/app/Src/Project details Screen.fx.yaml
@@ -467,7 +467,7 @@
         DisabledColor: =RGBA(166, 166, 166, 1)
         Height: =31
         Size: =20
-        Text: ="Projecttdetails"
+        Text: ="Projectdetails"
         Width: =241
         X: =63
         Y: =200
